Bug 514784 - RK()-device: Text-misalignment when using some symbols
Summary: RK()-device: Text-misalignment when using some symbols
Status: RESOLVED FIXED
Alias: None
Product: rkward
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: RKWard Team
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2026-01-18 09:42 UTC by Thomas Friedrichsmeier
Modified: 2026-01-18 10:20 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Friedrichsmeier 2026-01-18 09:42:27 UTC
Graphics text misalignment with some symbols.

Try the following code example with RK() and grDevices::X11() devices:
  plot(1, 1, sub="☀️ ☀️\nx x\n௵ ௵")

For the RK()-device the first pair of symbols is off-center, somehow.

First found in rkward 0.8.2, but probably the issue has been around for much longer.
Comment 1 Thomas Friedrichsmeier 2026-01-18 10:20:47 UTC
Git commit a43bb289ee58d9560581bcbaffd43a45ec0f128a by Thomas Friedrichsmeier.
Committed on 18/01/2026 at 10:20.
Pushed by tfry into branch 'master'.

Fix horizontal text offset in RK() device

M  +1    -0    ChangeLog
M  +7    -8    rkward/rbackend/rkwarddevice/rkgraphicsdevice.cpp
M  +1    -1    rkward/rbackend/rkwarddevice/rkgraphicsdevice.h
M  +1    -1    rkward/rbackend/rkwarddevice/rkgraphicsdevice_frontendtransmitter.cpp

https://invent.kde.org/education/rkward/-/commit/a43bb289ee58d9560581bcbaffd43a45ec0f128a