Fix horizontal text offset in RK() device

BUG: 514784